plugin/testData/annotator/perl/unreachableCode/givenWhenWhenDefaultPostfix.code
sub subname {
    say 'start';
    given($something){
        say 'before';
        say $a when($a);
        say 'mid';
        say $b when($b);
        say 'mid2';
        default{
            say $c;
        }
        say '<error descr="Unreachable code">after</error>';
    }
    say 'end';
}
